--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -26,7 +26,7 @@
     "esModuleInterop": true,
 
     /* Uncomment to use local jupyterlab instance */
-    // "paths": { "@jupyterlab/*": ["../jupyterlab/packages/*"] },
+    "paths": { "@jupyterlab/*": ["../jupyterlab/packages/*"] },
 
     /* Logging */
     "preserveWatchOutput": true
